Update import library, load dataset, eda done

--- a/capstone.ipynb
+++ b/capstone.ipynb
@@ -728,12 +728,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6497046f",
+   "cell_type": "markdown",
+   "id": "6e5e5476",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Senin, 12 Mei 2025. EDA Done."
+   ]
   }
  ],
  "metadata": {
