--- a/capstone.ipynb
+++ b/capstone.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "4636ed31",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8405a083",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "126d7be5",
    "metadata": {},
    "outputs": [
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "0233bc9d",
    "metadata": {},
    "outputs": [
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1dcef26e",
    "metadata": {},
    "outputs": [
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "010dfa11",
    "metadata": {},
    "outputs": [
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "4e66ea93",
    "metadata": {},
    "outputs": [
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "d5cbe84e",
    "metadata": {},
    "outputs": [
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "65dc9889",
    "metadata": {},
    "outputs": [
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "7d0112e1",
    "metadata": {},
    "outputs": [
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "1d2de396",
    "metadata": {},
    "outputs": [
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "2b544225",
    "metadata": {},
    "outputs": [
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "8aac3b43",
    "metadata": {},
    "outputs": [
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "59169d93",
    "metadata": {},
    "outputs": [],
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "0bdfc6fd",
    "metadata": {},
    "outputs": [],
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "3e5a6f15",
    "metadata": {},
    "outputs": [
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "0eaaee3b",
    "metadata": {},
    "outputs": [
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "74e5848b",
    "metadata": {},
    "outputs": [
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "74c45999",
    "metadata": {},
    "outputs": [],
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "dc66988f",
    "metadata": {},
    "outputs": [
@@ -1237,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "4f098dd2",
    "metadata": {},
    "outputs": [
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "b2a1bdd8",
    "metadata": {},
    "outputs": [
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "4dd619fc",
    "metadata": {},
    "outputs": [
@@ -1355,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "82cae9da",
    "metadata": {},
    "outputs": [],
@@ -1374,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "3e534ba7",
    "metadata": {},
    "outputs": [
@@ -1817,7 +1817,7 @@
        "                   random_state=42, scoring='accuracy')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1837,7 +1837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "d9aac994",
    "metadata": {},
    "outputs": [
@@ -1898,7 +1898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "29248455",
    "metadata": {},
    "outputs": [
@@ -1935,6 +1935,50 @@
     "plt.ylim(0, 1)\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "269c9490",
+   "metadata": {},
+   "source": [
+    "# SAVE MODEL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cc9b0af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Model, preprocessor, label encoder, dan target mapping telah disimpan untuk deployment\n"
+     ]
+    }
+   ],
+   "source": [
+    "os.makedirs('model', exist_ok=True)\n",
+    "\n",
+    "with open('model/model_obesitas_tuned.pkl', 'wb') as file:\n",
+    "    pickle.dump(tuned_model, file)\n",
+    "\n",
+    "# Simpan preprocessor\n",
+    "with open('model/preprocessor_obesitas.pkl', 'wb') as file:\n",
+    "    pickle.dump(preprocessor, file)\n",
+    "\n",
+    "# Simpan label encoder\n",
+    "with open('model/label_encoder_obesitas.pkl', 'wb') as file:\n",
+    "    pickle.dump(le_target, file)\n",
+    "    \n",
+    "# Simpan target mapping\n",
+    "with open('model/target_mapping.pkl', 'wb') as file:\n",
+    "    pickle.dump(target_mapping, file)\n",
+    "\n",
+    "print(\"\\nModel, preprocessor, label encoder, dan target mapping telah disimpan untuk deployment\")"
    ]
   }
  ],
